Add instance to event loop threads